--- a/style/Style.css
+++ b/style/Style.css
@@ -22,6 +22,7 @@
     box-sizing: border-box;
 }
 .nomeFalcon {
+    text-align: center;
     font-weight: bold;
     font-size: 3.5rem;
     line-height: 1.3;
@@ -45,7 +46,30 @@
     margin-top:4rem;
     border-radius: 1rem;
 }
-/*colocar icones dentro das texBox(como fazer?)
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    padding-right:inherit;
+}
+.col-md-3 weapper{
+    padding-right:inherit;
+}
+
+ .navbar .container {
+     display:block;
+}
+ .imgSetaNome{
+   margin-top:auto;
+   padding-left:initial;
+ }
+
+img-fluid{
+    vertical-align:middle;
+}
+
+    /*colocar icones dentro das texBox(como fazer?)
 .glyphicon-envelope:before{
     content: "\2709"
-}*/ 
+}*/
+
