--- a/style/Style.css
+++ b/style/Style.css
@@ -1,8 +1,20 @@
-﻿html,body{
-    width: 100vw;
-    height: 100vh;
+﻿.main {
     padding: 0;
     margin: 0;
+    height: 100%;
+    transition: all .5s ease-in-out;
+}
+
+@media (max-width: 767.98px) {
+    .main {
+        height: auto;
+    }
+}
+
+
+html, body {
+    width: 100vw;
+    height: 100vh;
 }
 .texto-centro {
     background-color: white;
@@ -55,18 +67,8 @@
     letter-spacing:2px;
 }
 .btn, .btn-primary, .btn-block {
-    margin-top:4rem;
-    border-radius: 1rem;
-}
-.wrapper {
-    display: flex;
-    width: 100%;
-    align-items: stretch;
-    padding-right:inherit;
-}
-.col-md-3, .weapper{
-    padding-right:0;
-    padding-bottom:0;
+    /*margin-top:4rem;
+    border-radius: 1rem;*/
 }
 
  .navbar .container {
@@ -77,17 +79,6 @@
 }
 .aquarium{
    margin-right: 0px;
-}
-.container-fluid{
-    display:flex;
-    justify-content: space-between;
-}
-.main{
-    height: 100vh;
-    margin-right:0px;
-}
-.menu {
-    background: #007bff!important;
 }
 .z-depth-0{
     display:flex;
