Adicionando validação da página Inicial, inserindo models, controllers e a inserção de dados do chamado.

--- a/Pages/Techs/MasterPage.master
+++ b/Pages/Techs/MasterPage.master
@@ -118,8 +118,13 @@
         </div>
 
     </div>
-    <script src="Scripts/jquery-3.5.1.slim.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
+    <script src="Scripts/jquery-3.5.1.slim.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+          $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 </html>
