--- a/style/Style.css
+++ b/style/Style.css
@@ -23,6 +23,10 @@ html, body {
     text-align: center!important;
 }
 
+.card-body {
+    box-shadow: 2px 4px 9px #0000003d;
+}
+
 .principal {
     display: flex;
     justify-content: center;
@@ -61,30 +65,65 @@ html, body {
 }
 .form-control {
     border-radius: 1.5rem;
-    /*margin-bottom: 1.5rem !important;*/
     font-family:Arial;
     letter-spacing:2px;
-}
-.btn, .btn-primary, .btn-block {
-    /*margin-top:4rem;
-    border-radius: 1rem;*/
-}
-
- .navbar .container {
-     display:block;
-}
-.imgSeta{
-    margin: 10px;
-}
-.aquarium{
-   margin-right: 0px;
-}
-.z-depth-0{
-    display:flex;
-    flex-wrap:wrap;
 }
 
 #loginAlert {
     top: 10px;
     left: 10px;
+}
+
+#slider {
+    position: fixed;
+    width: 50vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: white;
+    box-shadow: 2px 4px 9px #0000003d;
+    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+}
+
+.slide-in {
+    animation: slide-in 0.5s forwards;
+    -webkit-animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+    animation: slide-out 0.5s forwards;
+    -webkit-animation: slide-out 0.5s forwards;
+}
+
+@keyframes slide-in {
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+@-webkit-keyframes slide-in {
+    100% {
+        -webkit-transform: translateX(0%);
+    }
+}
+
+@keyframes slide-out {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes slide-out {
+    0% {
+        -webkit-transform: translateX(0%);
+    }
+
+    100% {
+        -webkit-transform: translateX(-100%);
+    }
 }
