--- a/Pages/Techs/MasterPage.master
+++ b/Pages/Techs/MasterPage.master
@@ -27,9 +27,7 @@
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
 
-    
-
-    <link href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/> 
 
      <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
@@ -53,18 +51,18 @@
             <div class="nav collapse navbar-collapse w-100 p-3 align-items-start" id="navbarMenu">
                 <ul class="navbar-nav nav flex-column">
                     <li class="nav-item">
-                        <a href="/perfil" class="nav-link lead row">
+                        <a href="#" class="nav-link lead row">
                             <i class="fa fa-user mr-3 col-1"></i><span class="col-1">Perfil</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/chamado" class="nav-link lead row">
+                        <a href="#" class="nav-link lead row">
                             <i class="fa fa-book mr-3 col-1"></i><span class="col-1">Chamados</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="/local" class="nav-link lead row">
-                            <i class="fa fa-map-marker mr-3 col-1"></i><span class="col-1">Local</span>
+                            <i class="fa fa-laptop mr-3 col-1"></i><span class="col-1">Local</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -88,13 +86,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/graficos" class="nav-link lead row">
+                        <a href="#" class="nav-link lead row">
                             <i class="fa fa-dashboard mr-3 col-1"></i><span class="col-1">Gráficos
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="/relatorios" class="nav-link lead row">
-                            <i class="fa fa-clipboard mr-3 col-1"></i><span class="col-1">Relatórios
                         </a>
                     </li>
                     <li class="nav-item">
@@ -120,25 +113,53 @@
             </div>
 
 
-            <div id="con" class="d-flex p-2 flex-wrap flex-column">
+            <div id="con" class="d-flex p-2 flex-wrap">
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
 
 
-            <footer id="footer" class="p-3 mt-3 text-center">
+            <footer id="footer p-3">
                 <span class="text-center">Falcon-dex. Todos os direitos reservados &copy; 2020</span>
             </footer>
         </div>
 
     </div>
-    <script type="module" src="Scripts/popper.min.js"></script>
+    <script src="Scripts/popper.min.js"></script>
     <script src="Scripts/jquery-3.5.1.slim.min.js"></script> 
     <script src="Scripts/bootstrap.min.js"></script> 
-     <script type="text/javascript">
-          $(function () {
-              $('[data-toggle="tooltip"]').tooltip()
-          })
-     </script>
+    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+        $("#form2").submit(function (e) {
+            $('#novoLocal').modal('hide');
+        });
+        
+        /*$(document).ready(function () {
+            $('#table_id').DataTable({
+                "language": {
+                    "lengthMenu": "Apresentar _MENU_ linhas por páginas",
+                    "zeroRecords": "Sem resultados",
+                    "info": "Mostrando a página _PAGE_ of _PAGES_",
+                    "infoEmpty": "Sem resultados",
+                    "search": "Pesquisar:",
+                    "paginate": {
+                        "first": "Primeiro",
+                        "last": "Último",
+                        "next": "Próximo",
+                        "previous": "Anterior"
+                    },
+                    "infoFiltered": "(Filtrando de _MAX_ total de registros )"
+                }
+            }
+            ); 
+        });*/
+    </script>
+   
+     
+     
+  
 </body>
 </html>
