--- a/Pages/Techs/MasterPage.master
+++ b/Pages/Techs/MasterPage.master
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link lead row">
+                        <a href="/emprestimo" class="nav-link lead row">
                             <i class="fa fa-hand-o-up mr-3 col-1"></i><span class="col-1">Empréstimos</span>
                         </a>
                     </li>
