--- a/Pages/Techs/MasterPage.master
+++ b/Pages/Techs/MasterPage.master
@@ -1,13 +1,12 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="Pages_Techs_MasterPage" %>
-
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png" />
@@ -25,7 +24,7 @@
     <link rel="manifest" href="/img/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#007bff" />
 
     <link href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet"/> 
 
@@ -150,5 +149,15 @@
     <script type="module" src="Scripts/popper.min.js"></script>
     <script src="./scripts/bootstrap.min.js"></script>
     <script type="module" src="/misc/datepicker.esm.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            console.log('ServiceWorker é suportado, vamos usar!');
+            navigator.serviceWorker.register('/misc/sw.js')
+                .then(reg => console.info('registered sw', reg))
+                .catch(err => console.error('error registering sw', err));
+        } else {
+            console.log('ServiceWorker não é suportado.');
+        }
+    </script>
 </body>
 </html>
